fix contrast between filterbox and map

--- a/assets/styles/leaflet-wikia.css
+++ b/assets/styles/leaflet-wikia.css
@@ -157,7 +157,7 @@ html,
 }
 
 .filter-menu-header {
-	background: rgba(51, 51, 51, 0.8);
+	background: rgba(0, 0, 0, 0.8);
 	border-top-left-radius: 3px;
 	border-top-right-radius: 3px;
 	cursor: pointer;
@@ -225,7 +225,7 @@ html,
 }
 
 .point-types {
-	background: rgba(102, 102, 102, 0.6);
+	background: rgba(0, 0, 0, 0.6);
 	border-bottom-left-radius: 3px;
 	border-bottom-right-radius: 3px;
 	-ms-flex-negative: 1;
